@@ -93,7 +93,7 @@ dnl whether (v)dccm connection file support is required
 dnl
 AC_ARG_ENABLE(dccm-file-support,
               [  --enable-dccm-file-support  enable dccm file support],
-              enable_dccm_file_support=$enableval, enable_dccm_file_support=yes)
+              enable_dccm_file_support=$enableval, enable_dccm_file_support=no)
 
 if ! test "$enable_dccm_file_support" = "no"; then
   AC_MSG_NOTICE([Building with dccm file support])
@@ -111,7 +111,7 @@ dnl whether odccm dbus support is required
 dnl
 AC_ARG_ENABLE(odccm-support,
               [  --enable-odccm-support  enable odccm support (requires D-Bus)],
-              enable_odccm_support=$enableval, enable_odccm_support=yes)
+              enable_odccm_support=$enableval, enable_odccm_support=no)
 
 if ! test "$enable_odccm_support" = "no"; then
   dnl Check for D-Bus
@@ -142,7 +142,7 @@ dnl whether hal dbus support is required
 dnl
 AC_ARG_ENABLE(hal-support,
               [  --enable-hal-support  enable hal support (requires D-Bus)],
-              enable_hal_support=$enableval, enable_hal_support=yes)
+              enable_hal_support=$enableval, enable_hal_support=no)
 
 if ! test "$enable_hal_support" = "no"; then
   dnl Check for DBus and Hal
@@ -172,7 +172,7 @@ dnl
 dnl whether dbus support for udev is required
 dnl
 AC_ARG_ENABLE(udev-support,
-              [  --enable-udev-support  enable udev support (requires D-Bus)],
+              [  --disable-udev-support  enable udev support (requires D-Bus)],
               enable_udev_support=$enableval, enable_udev_support=yes)
 
 if ! test "$enable_udev_support" = "no"; then
@@ -202,9 +202,10 @@ AC_DEFINE_UNQUOTED(ENABLE_UDEV_SUPPORT, $udev, [Define to 1 if you want udev sup
 
 
 # do we use hal or udev for dccm ?
-AC_ARG_ENABLE(udev, AC_HELP_STRING([--enable-udev-dccm], [Build dccm for udev]),enable_udev="$enableval",enable_udev=yes)
+AC_ARG_ENABLE(udev, AC_HELP_STRING([--enable-hal-dccm], [Build dccm for hal (default udev)]),enable_udev="$enableval",enable_udev=yes)
 AM_CONDITIONAL(USE_HAL, test "x$enable_udev" = "xno")
 if test "x$enable_udev" = "xno"; then
+    AC_MSG_NOTICE([Building dccm for HAL])
     AC_DEFINE(USE_HAL, 1, [Build using hal])
 
     dnl Check for HAL
@@ -236,6 +237,7 @@ if test "x$enable_udev" = "xno"; then
     fi
     AC_SUBST(hal_addon_dir)
 else
+    AC_MSG_NOTICE([Building dccm for Udev])
     PKG_CHECK_MODULES(GUDEV, gudev-1.0)
     PKG_CHECK_MODULES(UDEV, udev)
 
